--- a/XmlDiffLib.Tests/TestResources.resx
+++ b/XmlDiffLib.Tests/TestResources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="exampleA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\examplea.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="exampleB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\exampleb.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="HAAR01000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\haar01000.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
