--- a/XmlDiffLib.Tests/TestResources.resx
+++ b/XmlDiffLib.Tests/TestResources.resx
@@ -130,4 +130,10 @@
   <data name="HAAR01001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\haar01001.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="exampleC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\examplec.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="exampleD" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\exampled.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
